[workspace]
resolver = "2"
members = [
    

    # # Library Packages
    # "libs/abacus-formulas",
    # "libs/abacus-runtime",
    "libs/common",
    # "libs/common-ethers",

    # Native Application Package
    # "apps/abacus-docs",
    # "apps/scenarios",
    # "bin/scenarios",

    "bin/vendor",
    "bin/keeper",
    "bin/scripts",

    "proc-macros/abacus-macros",
    "proc-macros/amount-macros",
    "proc-macros/labels-macros",
    "proc-macros/vector-macros",
]

[workspace.dependencies]
alloy = { version = "1.2", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "signer-local",
    "getrandom",
] }
alloy-primitives = { version = "1.2", default-features = false, features = [
    "tiny-keccak",
] }
abacus-macros = { path = "./proc-macros/abacus-macros" }
alloy-sol-macro = { version = "1.2", default-features = false }
alloy-sol-macro-expander = { version = "1.2", default-features = false }
alloy-sol-macro-input = { version = "1.2", default-features = false }
alloy-sol-types = "1.2"
alloy-contract = "1.2"
amount-macros = { path = "./proc-macros/amount-macros" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20"
dotenv = "0.15.0"
ethers = "2.0"
eyre = "0.6.8"
futures = "0.3"
hex = { version = "0.4", default-features = false }
itertools = { version = "0.14" }
labels-macros = { path = "./proc-macros/labels-macros" }
rand = { version = "0.9" }
regex = "1.12"
reqwest = { version = "0.12", default-features = false }
ruint = "^1.12.3"
serde = { version = "^1.0", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
vector-macros = { path = "./proc-macros/vector-macros" }
common = { path = "libs/common" }

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"
