[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Common Library"

[dependencies]
alloy = { workspace = true }

alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

serde = { workspace = true }


[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["vec-u8", "std"]
debug = []
vec-u128 = []
vec-u8 = []
amount-sqrt = []
std = ["serde_json", "tokio", "tracing"]
stylus = []
stylus-test = []

[lib]
crate-type = ["lib", "cdylib"]
